--- a/source/style/_doc/index.scss
+++ b/source/style/_doc/index.scss
@@ -1,4 +1,4 @@
-@import "dress-code/dist/sass/dress-code";
+@import "../../../node_modules/dress-code/dist/sass/dress-code";
 
 @import "./vars";
 @import "./mixins";
