--- a/source/style/_doc/vars.scss
+++ b/source/style/_doc/vars.scss
@@ -5,17 +5,17 @@ $doc-breakpoint-small: 480px !default;
 
 // colors
 // -------------
-$doc-color-primary: #fe6d05 !default;
+$doc-color-primary: black !default;
 $doc-color-lightest: #fff !default;
 $doc-color-lighter: $dc-gray80 !default;
 $doc-color-light: #f3f3f3 !default;
 $doc-color-mediumlight: #eee !default;
 $doc-color-medium: #ccc !default;
 $doc-color-mediumdark: #999 !default;
-$doc-color-dark: #666 !default;
-$doc-color-darker: #444 !default;
-$doc-color-darkest: #333 !default;
-
+$doc-color-dark: #444 !default;
+$doc-color-darker: #333 !default;
+$doc-color-darkest: #111 !default;
+$pink_Dark: #f15838 !default;
 // navbar
 // -----
 $doc-navbar-height: 50px !default;
