--- a/source/style/_doc/vars.scss
+++ b/source/style/_doc/vars.scss
@@ -16,6 +16,8 @@ $doc-color-dark: #444 !default;
 $doc-color-darker: #333 !default;
 $doc-color-darkest: #111 !default;
 $pink_Dark: #f15838 !default;
+$pink: #fdbba6 !default;
+$brass: #c6725b !default;
 // navbar
 // -----
 $doc-navbar-height: 50px !default;
