--- a/source/style/_doc/formatting.scss
+++ b/source/style/_doc/formatting.scss
@@ -6,7 +6,12 @@
   }
 
   a {
-    font-weight: 500;
+    font-weight: 600;
+    color: black;
+    transition: color 200ms;
+    &:hover {
+      color: #222;
+    }
   }
 
   h2,
@@ -66,10 +71,14 @@
 
   img {
     display: inline-block;
-    padding: 0 20px;
+    // padding: 0 20px;
     max-width: 100%;
     position: relative;
     vertical-align: top;
+    border-radius: 3px !important;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.05);
+
+
   }
 
   img.alignright {
@@ -166,7 +175,6 @@
     }
   }
 }
-
 
 //
 // "highlight.js" (built-in hexo code highlight plugin)
@@ -283,12 +291,12 @@
       .symbol,
       .symbol .string,
       .value {
-        color: $dc-orange40;
+        color: $brass;
       }
 
       .literal,
       .number {
-        color: $dc-orange40;
+        color: $brass;
       }
 
       .addition,
@@ -314,7 +322,7 @@
       .subst,
       .tag .value,
       .tex .command {
-        color: $dc-orange40;
+        color: $brass;
       }
 
       .apache .sqbracket,
