--- a/source/style/_doc/typography.scss
+++ b/source/style/_doc/typography.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata');
 
 // Typescale
 $type-1: 2.25rem;
@@ -27,9 +28,8 @@ a {
   color: black;
 }
 
-* {
+html {
   font-family: 'Open Sans';
-  box-sizing: border-box;
 }
 
 h1 {
@@ -99,4 +99,9 @@ hr {
 
 figure {
   border-radius: 4px;
+}
+
+code, kbd, pre, samp, .code, .line {
+    font-family: 'Inconsolata', monospace !important;
+    font-size: 1em;
 }
