--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -39,6 +39,15 @@
     <!-- js source  -->
     <script src="<%- url_for('script/doc.js') %>"></script>
 
+    <% if (theme.mermaid.enable) { %>
+      <script src='https://unpkg.com/mermaid@<%= theme.mermaid.version %>/dist/mermaid.min.js'></script>
+      <script>
+        if (window.mermaid) {
+          mermaid.initialize({theme: 'forest'});
+        }
+      </script>
+    <% } %>
+
     <%- project_partial('footer_end') %>
 
   </body>
